docker/simple/k8s/tailchat.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tailchat
  namespace: tailchat
spec:
  selector:
    matchLabels:
      app: tailchat
  serviceName: tailchat
  replicas: 3
  template:
    metadata:
      labels:
        app: tailchat
    spec:
      containers:
        - name: tailchat
          image: moonrailgun/tailchat
          # imagePullPolicy: Always
          ports:
            - containerPort: 11000
          resources:
            requests:
              cpu: 50m
              memory: 51Mi
            limits:
              cpu: 500m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: tailchat-service
  namespace: tailchat
spec:
  type: ClusterIP
  selector:
    app: tailchat
  ports:
    - protocol: TCP
      port: 11000
      targetPort: 11000
